# fxc.github.com

./: CMakeLists.txt  README.md  index.html  index.md  main.cpp
qml/: DataStore.js  Main.qml
qml/components/: MetricCard.qml  SectionCard.qml  Sidebar.qml  SubSidebar.qml  TopHeader.qml
qml/pages/: AnomalyPage.qml  AssessPage.qml  DecisionPage.qml  DiagnosisPage.qml  HomePage.qml  LogPage.qml  MaintenancePage.qml  MonitorPage.qml  SignalAnalysisPage.qml
